Refactored default.py and added _ function for localisation.
_ is now a function in utilities that can be called to get the
string identified by the language code provided.

--- a/.pylint_rc
+++ b/.pylint_rc
@@ -5,7 +5,7 @@ persistent=yes
 load-plugins=
 
 [MESSAGES CONTROL]
-disable=C0301
+disable=C0301,W0142
 
 [REPORTS]
 output-format=text
@@ -24,15 +24,6 @@ generated-members=REQUEST,acl_users,aq_parent
 [BASIC]
 required-attributes=
 bad-functions=map,filter,apply,input
-module-rgx=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
-const-rgx=(([A-Z_][A-Z0-9_]*)|(__.*__))$
-class-rgx=[A-Z_][a-zA-Z0-9]+$
-function-rgx=[a-z_][a-zA-Z0-9_]{2,30}$
-method-rgx=[a-z_][a-zA-Z0-9_]{2,30}$
-attr-rgx=[a-z_][a-zA-Z0-9_]{2,30}$
-argument-rgx=[a-z_][a-zA-Z0-9_]{2,30}$
-variable-rgx=[a-z_][a-zA-Z0-9_]{2,30}$
-inlinevar-rgx=[A-Za-z_][A-Za-z0-9_]*$
 good-names=i,j,k,ex,Run,_
 bad-names=foo,bar,baz,toto,tutu,tata
 no-docstring-rgx=__.*__
